// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test UserInfo should render correctly 1`] = `
<div>
  <div
    class="info"
  >
    <div
      class="ant-flex css-dev-only-do-not-override-hash ant-flex-align-center"
      style="gap: 16px;"
    >
      <span
        class="ant-avatar ant-avatar-circle ant-avatar-image ant-avatar-icon avatar css-dev-only-do-not-override-hash"
        style="width: 52px; height: 52px; font-size: 26px;"
      >
        <img
          alt="avatar"
          src="mock-avatar"
        />
      </span>
      <div
        class="nickname"
      >
        mock-nickname
      </div>
    </div>
    <div
      class="email"
    >
      mock-email
    </div>
    <div
      class="ant-flex css-dev-only-do-not-override-hash"
      style="gap: 8px;"
    >
      <button
        class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-sm ant-btn-block"
        type="button"
      >
        <span>
          Log out
        </span>
      </button>
      <button
        class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-sm ant-btn-block yellow"
        type="button"
      >
        <span>
          Member Center
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`test UserInfo should render correctly in mobile 1`] = `
<div>
  <div
    class="info"
  >
    <div
      class="ant-flex css-dev-only-do-not-override-hash ant-flex-align-center"
      style="gap: 16px;"
    >
      <span
        class="ant-avatar ant-avatar-circle ant-avatar-image ant-avatar-icon avatar css-dev-only-do-not-override-hash"
        style="width: 32px; height: 32px; font-size: 16px;"
      >
        <img
          alt="avatar"
          src="mock-avatar"
        />
      </span>
      <div
        class="nickname"
      >
        mock-nickname
      </div>
    </div>
    <div
      class="ant-flex css-dev-only-do-not-override-hash"
      style="gap: 8px;"
    >
      <button
        class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-sm ant-btn-block"
        type="button"
      >
        <span>
          Log out
        </span>
      </button>
      <button
        class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-sm ant-btn-block yellow"
        type="button"
      >
        <span>
          Member Center
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`test UserInfo should render correctly when not login 1`] = `
<div>
  <div
    class="info"
  >
    <div
      class="ant-flex css-dev-only-do-not-override-hash ant-flex-align-center"
      style="gap: 16px;"
    >
      <span
        class="ant-avatar ant-avatar-circle ant-avatar-icon avatar css-dev-only-do-not-override-hash"
        style="width: 32px; height: 32px; font-size: 16px;"
      >
        <svgr-url
          classname="default-avatar"
        />
      </span>
      <div
        class="login-hint"
      >
        Get Free AI credits on us when you sign up for a FLUX account!
      </div>
    </div>
    <button
      class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-block yellow"
      type="button"
    >
      <span>
        Log in or Sign Up
      </span>
    </button>
  </div>
</div>
`;
